--- a/personal.html
+++ b/personal.html
@@ -3,15 +3,45 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anish Basnet</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <h1>Anish Basnet</h1>
-  <p> Hey</p>
-  <img src="https://clipground.com/images/passport-size-photo-clipart-1.png" alt="my picture">
-  <br>
-  <hr />
+  <!-- navigation bar -->
+  <nav class="navbar">
+    <div class="max-width">
+      <div class="logo">
+        <a href="#">Portfo<span>lio.</span></a>
+      </div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></a></li>
+        <li><a href="#">Services</a></a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- body part  -->
+  <section class="home" id="home">
+    <div class="max-width">
+        <div class="home-content">
+            <div class="text-1">
+              Hello, my name is
+            </div>
+            <div class="text-2">
+              Anish Basnet
+            </div>
+            <div class="text-3">
+              And I'm a <span>Web developer</span>
+            </div>
+        </div>
+    </div>
+  </section>
 
 </body>
 
