--- a/personal.html
+++ b/personal.html
@@ -14,42 +14,26 @@
 </head>
 
 <body>
-  <!-- navigation bar -->
-  <nav class="navbar">
-    <div class="max-width">
-      <div class="logo">
-        <a href="#">A   <span>B</span></a>
-      </div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></a></li>
-        <li><a href="#">Services</a></a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+  <div id="header">
+    <div class="container">
+      <nav class="navbar">
+          <div class="max-width">
+              <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+              <ul class="menu">
+                  <li><a href="#home" class="menu-btn">Home</a></li>
+                  <li><a href="#about" class="menu-btn">About</a></li>
+                  <li><a href="#services" class="menu-btn">Services</a></li>
+                  <li><a href="#skills" class="menu-btn">Skills</a></li>
+                  <li><a href="#teams" class="menu-btn">Teams</a></li>
+                  <li><a href="#contact" class="menu-btn">Contact</a></li>
+              </ul>
+              <div class="menu-btn">
+                  <i class="fas fa-bars"></i>
+              </div>
+          </div>
+      </nav>
     </div>
-  </nav>
-
-  <!-- body part  -->
-  <section class="home" id="home">
-    <div class="max-width">
-        <div class="home-content">
-            <div class="text-1">
-              Hello, my name is
-            </div>
-            <div class="text-2">
-              Anish Basnet
-            </div>
-            <div class="text-3">
-              And I'm a <span>Web developer</span>
-            </div>
-        </div>
-    </div>
-  </section>
-
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.s
-  </p>
+  </div>
 </body>
 
 </html>
