--- a/personal.html
+++ b/personal.html
@@ -6,34 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anish Basnet</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.6.1.min.js"
-  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-  crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="header">
-    <div class="container">
-      <nav class="navbar">
-          <div class="max-width">
-              <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
-              <ul class="menu">
-                  <li><a href="#home" class="menu-btn">Home</a></li>
-                  <li><a href="#about" class="menu-btn">About</a></li>
-                  <li><a href="#services" class="menu-btn">Services</a></li>
-                  <li><a href="#skills" class="menu-btn">Skills</a></li>
-                  <li><a href="#teams" class="menu-btn">Teams</a></li>
-                  <li><a href="#contact" class="menu-btn">Contact</a></li>
-              </ul>
-              <div class="menu-btn">
-                  <i class="fas fa-bars"></i>
-              </div>
-          </div>
-      </nav>
-    </div>
-  </div>
+  <div></div>
 </body>
 
 </html>
